# spotify-data

./: Cargo.toml  diesel.toml  docker-compose.yml  make_data.sh  spotify.sql
migrations/2024-06-19-180948_create_table_song/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
